package com.itbird.allowBackUp;

import android.os.Bundle;

import androidx.appcompat.app.AppCompatActivity;

import com.itbird.R;

public class AllowBackUpTestSecondActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.allowbackup_test_second);
    }
}