@startuml

title __ALLOWBACKUP's Class Diagram__\n

  namespace com.itbird {
    namespace allowBackUp {
      class com.itbird.allowBackUp.AllowBackUpTestLoginActivity {
          # onCreate()
      }
    }
  }
  

  namespace com.itbird {
    namespace allowBackUp {
      class com.itbird.allowBackUp.AllowBackUpTestSecondActivity {
          # onCreate()
      }
    }
  }
  

  com.itbird.allowBackUp.AllowBackUpTestLoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.allowBackUp.AllowBackUpTestSecondActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
